# aiolancium

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  codecov.yml  pyproject.toml
.github/workflows/: unittests.yaml  verification.yaml
aiolancium/: __about__.py  auth.py  client.py  decorator.py  proxy.py
aiolancium/interfaces/: __init__.py  _decorator.py  _proxy.py
aiolancium/resources/: __init__.py  api.json  openapi.py
aiolancium/utilities/: utilities.py
docs/: generate_apidoc.sh
docs/source/: changelog.rst  conf.py  index.rst
docs/source/api/: aiolancium.auth.rst  aiolancium.client.rst  aiolancium.decorator.rst  aiolancium.interfaces.rst  aiolancium.proxy.rst  aiolancium.resources.openapi.rst  aiolancium.resources.rst  aiolancium.rst  aiolancium.utilities.rst  aiolancium.utilities.utilities.rst  modules.rst
docs/source/changes/: added_async_data_downloader.yaml  added_get_file_info_support.yaml  added_upload_file_helper.yaml  added_upload_image_helper.yaml  changed_automatically_encode_body.yaml  changed_extract_token_expiry_date.yaml  fixed_checksum_header_body_file_upload.yaml  fixed_do_not_verify_token_aud.yaml  fixed_url_encode_query_params.yaml  versions.yaml
tests/: test_auth.py  test_client.py  test_decorator.py  test_proxy.py  test_resources.py
tests/utilities/: utilities.py
