[tool.poetry]
name = "aiolancium"
version = "0.1.0"
description = "AsyncIO Client for Lancium"
authors = ["Manuel Giffels <giffels@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers=[
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "Intended Audience :: System Administrators",
        "Intended Audience :: Information Technology",
        "Intended Audience :: Science/Research",
        "Operating System :: OS Independent",
        "Topic :: Internet :: WWW/HTTP :: Session",
        "Topic :: Utilities",
        "Framework :: AsyncIO",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
    ]
keywords=["asyncio", "lancium", "compute client"]
packages = [
    { include = "aiolancium" }
]

[tool.poetry.dependencies]
python = "^3.6.2"
simple-rest-client = "<=1.0.8"  # last version to support Python3.6
jsonref = "^1.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "<=22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
